--- a/index.org
+++ b/index.org
@@ -43,6 +43,132 @@ No feed available: http://ul.io/nb/, https://www.onwebsecurity.com/tag/emacs.htm
 #+End_src
 
 #+RESULTS:
+** 2020-12-14 Emacs news
+   :PROPERTIES:
+   :ID:       o2b:056b6201-efb1-4abd-ae05-b0d04e1ab6a0
+   :POST_DATE: [2020-12-15 Tue 00:53]
+   :BLOG:     sacha
+   :POSTID:   29654
+   :END:
+
+- Beginner:
+  - [[https://i.redd.it/byny8yeayv461.png][I created a list of emacs commands I frequently use while solving SICP exercises. [Complete beginner]​]] ([[https://reddit.com/r/emacs/comments/kc4lix/i_created_a_list_of_emacs_commands_i_frequently/][Reddit]])
+- Emacs configuration:
+  - [[http://emacsredux.com/blog/2020/12/08/favorite-emacs-packages/][Emacs Redux: Favorite Emacs Packages]] ([[https://reddit.com/r/emacs/comments/k94cj3/favorite_emacs_packages/][Reddit]])
+  - [[https://github.com/paultopia/yakmacs][yakmacs: baby tries to migrate off spacemacs with a clean config...]]
+  - [[https://pizza.eli.li/wiki/emacs-config/][eli-oat's Emacs Config]]
+  - [[http://www.nextpoint.se/?p=834][An Unorthodox Emacs Setup with an Init File Generator (a test)]] ([[https://reddit.com/r/emacs/comments/kbmga4/an_unorthodox_emacs_setup_with_an_init_file/][Reddit]])
+  - [[https://www.reddit.com/r/orgmode/comments/k8vqti/check_out_unpackagedel/][Check out unpackaged.el!]]
+  - [[https://moidev.com/posts/fijar-repositorio-para-paquete-en-emacs/][Fijar un Repositorio Para un Paquete en Emacs]] - how to pin using use-package
+- Emacs Lisp:
+  - [[https://github.com/skeeto/caliper][caliper: Compute Emacs Lisp object sizes.]]
+  - [[https://github.com/vindarel/termp][termp: Trivial utility: are we in a terminal window or in a dumb one? (like Emacs' Slime)]]
+  - [[https://irreal.org/blog/?p=9338][Irreal: Threading Macros in Elisp]]
+  - [[https://klibert.pl/posts/emacs-short-lambda.html][Clojure-like lambda expressions in Emacs Lisp]] ([[https://reddit.com/r/emacs/comments/k8f4c1/clojurelike_lambda_expressions_in_emacs_lisp/][Reddit]])
+  - [[https://orys.us/tW][Why isn't elisp nil the empty string?]] ([[https://reddit.com/r/emacs/comments/kb52wr/why_isnt_elisp_nil_the_empty_string/][Reddit]])
+- Emacs development:
+  - [[http://git.savannah.gnu.org/cgit/emacs.git/commit/etc/NEWS?id=252366866b5691965c8c752aa103ab157a6f3aaa][Add a new recursively bound `current-minibuffer-command' variable]]
+  - [[http://git.savannah.gnu.org/cgit/emacs.git/commit/etc/NEWS?id=ca0de4d1e0bd718568dfca8daf5498754145941a][* etc/NEWS: Add entry for dictionary.el]]
+  - [[http://git.savannah.gnu.org/cgit/emacs.git/commit/etc/NEWS?id=dc6e616dfea1a740248b8f73b35851f7b167ec16][Don't show matches with no input for nil icomplete-show-matches-on-no-input]]
+  - [[http://git.savannah.gnu.org/cgit/emacs.git/commit/etc/NEWS?id=8a220d7c8f30fda7239c1dbf7522e0170ef53527][New option gnus-registry-register-all]]
+  - [[http://git.savannah.gnu.org/cgit/emacs.git/commit/etc/NEWS?id=d165b5a46b2a84c637a80200ad6bcf164bbfa77b][New variable `redisplay_adhoc_scroll_in_resize_mini_windows`]]
+  - [[http://git.savannah.gnu.org/cgit/emacs.git/commit/etc/NEWS?id=f45ce78c40e37bf2aab83d2d1183ed896c5c1c4c][Explicitly specify svg base_uri using `:base-uri' image property]]
+  - [[http://git.savannah.gnu.org/cgit/emacs.git/commit/etc/NEWS?id=dba74cb5ec1c1abfbee236bbcf811b023bb19d4f][Allow customizing the Gnus summary thread indicators]]
+  - [[http://git.savannah.gnu.org/cgit/emacs.git/commit/etc/NEWS?id=78607f21b51cef7456d8075e67e3a1de5cf47483][* lisp/play/dunnet.el: Make it so loading the file is harmless]]
+  - [[http://git.savannah.gnu.org/cgit/emacs.git/commit/etc/NEWS?id=004d7e97e2c54c1089a776055ffd173d132fe5ae][Add a new command `memory-report']]
+  - [[http://git.savannah.gnu.org/cgit/emacs.git/commit/etc/NEWS?id=aa7e5ce651b1872180e8da94ac80fbc25e33eec0][Add new function `object-intervals']]
+  - [[http://git.savannah.gnu.org/cgit/emacs.git/commit/etc/NEWS?id=9d598ef93cbebe59f1d3a91f4fda35d3e00f36a9][Add new function 'image-cache-size']]
+  - [[http://git.savannah.gnu.org/cgit/emacs.git/commit/etc/NEWS?id=14ffab8263eb219fe0c49ad4e0a3476316c542c0][Add a new function `button-buttonize']]
+  - [[http://git.savannah.gnu.org/cgit/emacs.git/commit/etc/NEWS?id=ef711b1556f83c9aa841fec9927672245408fc9c][Make hexl scrolling commands work more like the normal ones]]
+  - [[http://git.savannah.gnu.org/cgit/emacs.git/commit/etc/NEWS?id=26b198cef987dc087994c8ce8bf852c4a37dbca0][Improve documentation of 'backtrace-on-error-noninteractive']]
+- Appearance:
+  - [[https://i.redd.it/trpj5app8i461.png][Emacs / N Λ N O / TTY mode.]] ([[https://reddit.com/r/emacs/comments/kaxpwi/emacs_n_λ_n_o_tty_mode/][Reddit]])
+  - [[https://www.reddit.com/r/emacs/comments/kab809/for_those_who_dont_already_know_emacs_supports/][For those who don't already know, emacs supports displaying fill column indicator natively from 27 onward]]
+- Navigation:
+  - [[https://youtu.be/gbdE7oZEdtA][How to Create and Manage Multiple Windows - Emacs Tips]] ([[https://reddit.com/r/emacs/comments/k9xb2v/how_to_create_and_manage_multiple_windows_emacs/][Reddit]])
+  - [[https://www.youtube.com/watch?v=C7ZlNRbWdVI][Organize Your Windows with the Tab Bar in Emacs 27 - YouTube]] (18:59)
+- Multimedia:
+  - [[https://www.reddit.com/r/emacs/comments/kctdiu/introducing_emdeez_controlling_deezer_within_emacs/][Introducing Emdeez - Controlling Deezer within Emacs]] - music player
+- Org Mode:
+  - [[https://lists.gnu.org/archive/html/bug-gnu-emacs/2020-12/msg01303.html][Org 9.4.1 is coming]] ([[https://reddit.com/r/emacs/comments/kcordb/org_941_is_coming/][Reddit]])
+  - [[https://www.reddit.com/r/emacs/comments/k9040b/improving_org_mode_with_extentions/][Improving org mode with extentions]]
+  - [[https://github.com/brunoarine/org-similarity][org-similarity: A package to help org-mode users discover similar or related notes in a directory.]] ([[https://reddit.com/r/planetemacs/comments/kafqmv/orgsimilarity_a_package_to_help_orgmode_users/][Reddit]])
+  - [[https://takeonrules.com/2020/12/08/revisiting-hydra-menu-for-org-roam-lookup-in-emacs/][Revisiting Hydra Menu for Org Roam Lookup in Emacs // Take on Rules]]
+  - [[https://github.com/shg/org-inline-pdf.el][org-inline-pdf.el: Enable inline PDF preview in Org buffers.]]
+  - [[https://sachachua.com/blog/2020/12/org-mode-create-a-quick-timestamped-note-and-capture-a-screenshot-by-prefilling-a-capture-template-via-emacs-lisp/][Sacha Chua: Org Mode: Create a quick timestamped note and capture a screenshot]]
+  - [[https://www.reddit.com/r/emacs/comments/kajuy1/organize_docs_in_org_mode/][Organize docs in org mode]]
+  - [[https://i.redd.it/nwujqzchk0461.gif][Instant LaTeX preview in org-mode with org-latex-impatient]] ([[https://reddit.com/r/emacs/comments/k9b0iu/instant_latex_preview_in_orgmode_with/][Reddit]])
+  - [[https://sachachua.com/blog/2020/12/org-mode-answers-task-creation-time-subtree-at-end-emacs-lisp-variables-in-tblfm-logbook-and-refile/][Sacha Chua: #org-mode answers: task creation time, subtree at end, Emacs Lisp variables in TBLFM, logbook and refile]]
+  - [[https://alphapapa.github.io/org-almanac/][Org Almanac]] - alphapapa's list of Org-related links
+  - Org export:
+    - [[https://www.youtube.com/watch?v=AP4LX8L7MFM][Reproducible Research with GNU Emacs and Org-mode - YouTube]] (32:59)
+    - [[https://thibaultmarin.github.io/blog/posts/2016-11-13-Personal_website_in_org.html][Personal website in org]] (2016)
+    - [[https://zzamboni.org/post/my-blogging-setup-with-emacs-org-mode-ox-hugo-hugo-gitlab-and-netlify/][Diego Zamboni: My blogging setup with Emacs, Org mode, ox-hugo, Hugo, GitLab and Netlify]]
+    - [[https://blog.allardhendriksen.nl/posts/blogging-hugo-ox-hugo/][Blogging using Hugo and ox-hugo]] (2018)
+    - [[https://kitchingroup.cheme.cmu.edu/blog/2014/09/22/Showing-what-data-went-into-a-code-block-on-export/][Showing what data went into a code block on export]] (2014)
+- Coding:
+  - [[https://ag91.github.io/blog/2020/12/11/emacsconf2020-first-steps-towards-emacs-becoming-your-code-compass/][Andrea: EmacsConf2020: first steps towards Emacs becoming your code compass!]]
+  - [[https://github.com/susam/emacs4cl][Tiny ~/.emacs for beginners to Common Lisp programming with line-by-line explanation]] ([[https://reddit.com/r/programming/comments/kbs1vg/tiny_emacs_for_beginners_to_common_lisp/][Reddit]])
+  - [[http://within-parens.blogspot.com/2020/12/iron-handling-with-emacs-lisp.html?m=1][Iron handling (with Emacs Lisp)]] ([[https://reddit.com/r/emacs/comments/k9htyc/iron_handling_with_emacs_lisp/][Reddit]])
+  - [[http://emacsredux.com/blog/2020/12/10/essential-magit-file-commands/][Emacs Redux: Essential Magit File Commands]]
+  - [[http://emacsredux.com/blog/2020/12/11/super-keybindings-for-magit/][Emacs Redux: Super Keybindings for Magit]]
+  - [[https://moidev.com/posts/informacion-con-lsp-ui-en-emacs-sideline/][Mostrar Informacion con LSP UI en Emacs - Sideline]]
+- Mail and news:
+  - [[https://cadadr.dreamwidth.org/828.html][My email setup with Emacs, Rmail, msmtp/mpop, mairix, and then some more]] ([[https://reddit.com/r/emacs/comments/kbpql9/my_email_setup_with_emacs_rmail_msmtpmpop_mairix/][Reddit]])
+- Community:
+  - [[https://emacssurvey.org/2020/][The results from the "State of Emacs Survey" are announced!]] ([[https://www.reddit.com/r/emacs/comments/k9a0r8/emacs_user_survey_2020_results/][/r/emacs part 1]], [[https://reddit.com/r/emacs/comments/kadhk7/the_results_from_the_state_of_emacs_survey_are/][/r/emacs part 2]], [[https://news.ycombinator.com/item?id=25388353][HN]])
+  - [[http://gromnitsky.blogspot.com/2020/12/reading-emacs-user-survey-2020-results.html][Alexander Gromnitsky: Reading the Emacs User Survey 2020 Results]]
+  - [[https://www.reddit.com/r/emacs/comments/k8zjx5/weekly_tipstricketc_thread/][Weekly tips/trick/etc/ thread]]
+  - [[https://www.reddit.com/r/emacs/comments/kc7xo8/curious_about_how_emacs_maintainerscore/][Curious about how Emacs maintainers/core developers use Emacs?]]
+  - [[https://oylenshpeegul.gitlab.io/blog/posts/20201206/][Emacs, Emacs, Emacs!]] ([[https://reddit.com/r/planetemacs/comments/kaegud/emacs_emacs_emacs/][Reddit]])
+  - [[https://www.reddit.com/r/emacs/comments/k8ruy1/emacs_wishlist/][Emacs Wishlist]]
+  - [[https://sachachua.com/blog/2020/12/emacsconf-2020-emacs-news-highlights/][Sacha Chua: EmacsConf 2020: Emacs News Highlights and a wishlist]]
+- Other:
+  - [[https://karthinks.com/software/more-batteries-included-with-emacs/][More batteries included with emacs]] ([[https://reddit.com/r/emacs/comments/kbodwa/more_batteries_included_with_emacs/][Reddit]])
+  - [[https://github.com/Fuco1/eshell-bookmark][eshell-bookmark: Eshell and bookmark.el integration]]
+  - [[http://gromnitsky.blogspot.com/2020/12/making-high-resolution-screenshots-of.html][Alexander Gromnitsky: Making high-resolution screenshots of Emacs frames]]
+  - [[https://orys.us/tX][Emacs sorting with sort-regexp-fields]]
+  - [[https://github.com/jumper047/tridactyl_emacs_config][Emacs bindings for Tridactyl (Firefox addon for mousless browsing)]] ([[https://reddit.com/r/emacs/comments/karysm/emacs_bindings_for_tridactyl_firefox_addon_for/][Reddit]])
+  - [[https://www.youtube.com/watch?v=VVOd1yOKVqQ][Blog directly from emacs using magit]] ([[https://reddit.com/r/emacs/comments/kb66gd/blog_directly_from_emacs_using_magit/][Reddit]])
+  - [[https://gitlab.com/ideasman42/emacs-utimeclock][[ANN] uTimeClock (manual time tracking) now on melpa]]
+  - [[https://sachachua.com/blog/2020/12/editing-subtitles-in-emacs-with-subed-with-synchronized-video-playback-through-mpv/][Sacha Chua: Editing subtitles in Emacs with subed, with synchronized video playback through mpv]]
+  - [[https://github.com/mrmekon/snitch-el][Introducing snitch.el -- a firewall for emacs]] ([[https://reddit.com/r/emacs/comments/k9xpeu/introducing_snitchel_a_firewall_for_emacs/][Reddit]])
+  - [[https://www.youtube.com/watch?v=eF5NfVN411Q][Using Multiple Monitors in EXWM - Emacs Desktop Environment #4 - YouTube]] (40:22)
+  - [[https://moidev.com/posts/comprobado-de-traduccion-en-espa%C3%B1ol-en-emacs/][Comprobado de Faltas de Ortografía en Emacs]] - flyspell
+  - [[https://notxor.nueva-actitud.org/2020/12/13/krei-epub-arhxivon.html][Krei epub arĥivon]] - Esperanto, PDF->EPUB
+- New packages:
+  - [[package:apparmor-mode][apparmor-mode]]: Major mode for editing AppArmor policy files
+  - [[package:consult][consult]]: Consulting completing-read
+  - [[package:consult-flycheck][consult-flycheck]]: Provides the command `consult-flycheck'
+  - [[package:consult-selectrum][consult-selectrum]]: Selectrum integration for Consult
+  - [[package:elegant-agenda-mode][elegant-agenda-mode]]: An elegant theme for your org-agenda
+  - [[package:elfeed-dashboard][elfeed-dashboard]]: An extensible frontend for elfeed using org-mode
+  - [[package:gitignore-snippets][gitignore-snippets]]: Gitignore.io templates for Yasnippet
+  - [[package:goggles][goggles]]: Pulse modified regions
+  - [[package:helm-org-ql][helm-org-ql]]: Helm support for org-ql
+  - [[package:imenu-extra][imenu-extra]]: Add extra items into existing imenu items
+  - [[package:ivy-file-preview][ivy-file-preview]]: Preview the current ivy file selection
+  - [[package:ll-debug][ll-debug]]: Low level debug tools
+  - [[package:marginalia][marginalia]]: Enrich existing commands with completion annotations
+  - [[package:math-preview][math-preview]]: Preview TeX math equations inline
+  - [[package:metal-archives][metal-archives]]: List future releases using Metal-Archives API
+  - [[package:ox-gemini][ox-gemini]]: Output gemini formatted documents from org-mode
+  - [[package:pikchr-mode][pikchr-mode]]: A major mode for the pikchr diagram markup language
+  - [[package:recursion-indicator][recursion-indicator]]: Recursion indicator
+  - [[package:utimeclock][utimeclock]]: Simple utility for manual time tracking
+  - [[package:xmind-org][xmind-org]]: Import XMind mindmaps into Org
+
+I'm curious about how we can help Emacs folks find jobs or freelancing
+contracts by connecting with each other. I don't really know how it
+might work out yet, but if you're looking for someone to fill a
+position or take on a freelancing contract, would you consider
+e-mailing me at sacha@sachachua.com so that I can include it in Emacs
+News? What kind of info might be useful? Short description, contact
+info, location/remote, and whether the position is
+free-software-compatible? Let's figure out what's possible! =)
+
+Links from [[http://reddit.com/r/emacs][reddit.com/r/emacs]], [[http://reddit.com/r/orgmode][r/orgmode]], [[http://reddit.com/r/spacemacs][r/spacemacs]], [[http://reddit.com/r/planetemacs][r/planetemacs]], [[https://hn.algolia.com/?query=emacs&sort=byDate&prefix&page=0&dateRange=all&type=story][Hacker News]], [[https://planet.emacslife.com][planet.emacslife.com]], [[https://www.youtube.com/results?search_query=emacs&search_sort=video_date_uploaded][YouTube]], [[http://git.savannah.gnu.org/cgit/emacs.git/log/etc/NEWS][the Emacs NEWS file]] and [[http://lists.gnu.org/archive/html/emacs-devel/2020-12][emacs-devel]].
+
 ** 2020-12-07 Emacs news
    :PROPERTIES:
    :ID:       o2b:4c95392e-ffde-41e6-b50e-0ef7decd204e
